--- a/app/views/events/competitors/_form_modal.html.haml
+++ b/app/views/events/competitors/_form_modal.html.haml
@@ -27,7 +27,9 @@
                        options_for_select([[@competitor.name, @competitor.profile_id]]), 
                        {},
                        id: :profile_id,
-                       class: 'form-control'
+                       placeholder: t('tracks.form.profile_select_placeholder'),
+                       class: 'form-control',
+                       'data-controller': 'select2--profiles'
 
         .radio
           %label
@@ -59,7 +61,8 @@
                        options_for_select([[@competitor.suit_name, @competitor.suit_id]]), 
                        {},
                        id: :suit_id,
-                       class: 'form-control'
+                       class: 'form-control',
+                       'data-controller': 'select2--suits'
 
         .form-group
           = f.label :section, t('activerecord.attributes.competitor.section'), class: 'control-label col-sm-4'
