--- a/app/views/tournaments/tournament_competitors/_form_modal.html.haml
+++ b/app/views/tournaments/tournament_competitors/_form_modal.html.haml
@@ -25,7 +25,9 @@
             = f.select :profile_id,
                        options_for_select([[@competitor.name, @competitor.profile_id]]), 
                        {},
-                       class: 'form-control'
+                       placeholder: t('tracks.form.profile_select_placeholder'),
+                       class: 'form-control',
+                       'data-controller': 'select2--profiles'
 
         .radio
           = f.label :profile_mode, value: :create do
@@ -56,7 +58,8 @@
             = f.select :suit_id,
                        options_for_select([[@competitor.suit_name, @competitor.suit_id]]), 
                        {},
-                       class: 'form-control'
+                       class: 'form-control',
+                       'data-controller': 'select2--suits'
 
         - unless @competitor.new_record?
           %hr
@@ -78,6 +81,4 @@
         %button.btn.btn-default{type: 'button', data: {dismiss: 'modal'}}= t 'general.cancel'
 
 :javascript
-  Skyderby.helpers.ProfileSelect($('select[name="tournament_competitor[profile_id]"]'));
-  Skyderby.helpers.SuitSelect($('select[name="tournament_competitor[suit_id]"]'));
   Skyderby.helpers.CountrySelect($('select[name="tournament_competitor[profile_attributes][country_id]"]'));
