move select2 to webpacker and stimulus

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require bootstrap-datepicker/dist/css/bootstrap-datepicker3
- *= require select2.min
+ *= require select2/dist/css/select2
  *= require select2-bootstrap
  *= require ion.rangeSlider
  *= require ion.rangeSlider.skinFlat
