--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -1,7 +1,7 @@
 /*
  *= require ion.rangeSlider
  *= require ion.rangeSlider.skinFlat
- *= require select2.min
+ *= require select2/dist/css/select2
  *= require select2-bootstrap
 */
 
