--- a/app/views/layouts/application.html+mobile.haml
+++ b/app/views/layouts/application.html+mobile.haml
@@ -3,6 +3,8 @@
   %head
     %title= page_title(yield(:title))
     = stylesheet_link_tag 'mobile/application', media: 'all', 'data-turbolinks-track' => true
+    = javascript_pack_tag 'application'
+
     = csrf_meta_tags
 
     %meta{property: 'og:title', content: page_title(yield(:title))}
