--- a/app/views/track_files/show.js.erb
+++ b/app/views/track_files/show.js.erb
@@ -4,6 +4,6 @@ $('#modal').html('<%= j render('show_modal') %>');
 $('#modal').modal('show');
 
 $('.segments-table tr').on('click', function(e) {
-  var form = $(e.currentTarget).find('td:last form');
-  $.rails.handleRemote(form);
+  var form = e.currentTarget.querySelector('td form');
+  $.rails.fire(form, 'submit');
 });
