--- a/app/views/manage/accounts/index.html.haml
+++ b/app/views/manage/accounts/index.html.haml
@@ -3,10 +3,13 @@
     %h1 Учетные записи
 
   .content-block
-    .index-search__container
+    .index-search__container{'data-controller': 'index-search'}
       %span.index-search__icon
         %i.fa.fa-search
-      %input.index-search__input{name: 'search', data: { remote: true, url: accounts_path }, placeholder: 'Type to search', value: params[:search]}
+      %input.index-search__input{name: 'search',
+                                 data: { remote: true, url: accounts_path },
+                                 placeholder: 'Type to search', value: params[:search],
+                                 'data-action': 'input->index-search#perform'}
 
     .table.accounts__table
       .thead
@@ -19,18 +22,3 @@
 
   .accounts__pagination.text-center.top-buffer
     = will_paginate @accounts, renderer: BootstrapPagination::Rails
-
-- content_for :page_js do
-  :javascript
-    (function() {
-      var elem = document.querySelector('input[name="search"]');
-      var timer_id = undefined;
-      elem.addEventListener('input', function() {
-        if (timer_id !== undefined) clearTimeout(timer_id);
-
-        timer_id = setTimeout(function() {
-          $.rails.handleRemote($(elem));
-          timer_id = undefined;
-        }, 200);
-      });
-    })();
