--- a/app/views/tournaments/_form.html.haml
+++ b/app/views/tournaments/_form.html.haml
@@ -31,7 +31,7 @@
       .form-group
         = f.label :starts_at, class: 'control-label col-sm-2'
         .col-sm-10
-          = f.text_field :starts_at, class: 'form-control datepicker'
+          = f.text_field :starts_at, class: 'form-control', 'data-controller': 'datepicker'
 
       .form-group
         = f.label :bracket_size, class: 'control-label col-sm-2'
