move jquery-validation to webpack

--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,7 +1,7 @@
 - modal ||= false
 - allow_change_rules ||= false
 
-= form_for @event, remote: modal, html: {class: 'form-horizontal', role: 'form', id: "#{action_name}_event_form"} do |f|
+= form_for @event, remote: modal, html: { class: 'form-horizontal', 'data-controller': 'events--form', role: 'form', id: "#{action_name}_event_form"} do |f|
   = hidden_field_tag :display_raw_results, @display_raw_results
 
   - if modal
