--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -57,7 +57,7 @@
               %li
                 .row
                   .col-md-12
-                    = form_for(:user, url: session_path(:user), html: {class: 'form sign-in-form', role: 'form'}) do |f|
+                    = form_for(:user, url: session_path(:user), html: { class: 'form', role: 'form', 'data-controller': 'users--sign-in' }) do |f|
                       .form-group
                         = label_tag 'user_email', 'Email address', for: 'user_email', class: 'sr-only'
                         = f.text_field :email, class: 'form-control', type: 'email', placeholder: t('application.header.login_email')
@@ -82,23 +82,3 @@
             = image_tag asset_path('blank.gif'), class: "flag flag-#{ I18n.locale}"
             %i.fa.fa-caret-down
           = lang_menu
-
-- content_for :page_js do
-  :javascript
-    $('.sign-in-form').validate({
-      rules: {
-        'user[email]': {
-          required: true,
-          email: true
-        },
-        'user[password]': {
-          required: true
-        }
-      },
-      highlight: function(element) {
-        $(element).closest('.form-group').addClass('has-error');
-      },
-      unhighlight: function(element) {
-        $(element).closest('.form-group').removeClass('has-error');
-      }
-    });
