--- a/app/views/users/registrations/new.html+mobile.haml
+++ b/app/views/users/registrations/new.html+mobile.haml
@@ -4,7 +4,10 @@
 
     .content-block
       .content-container
-        = form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'new-user-form'}) do |f|
+        = form_for(resource,
+                   as: resource_name,
+                   url: registration_path(resource_name),
+                   html: { class: 'new-user-form', 'data-controller': 'users--sign-up' }) do |f|
           = devise_error_messages!
 
           .form-group
@@ -36,31 +39,3 @@
         = t('devise.shared.links.sign_in')
         %span.icon-right
           %i.fa.fa-chevron-right
-
-- content_for :page_js do
-  :javascript
-    $('.new-user-form').validate({
-      rules: {
-        'user[name]': {
-          minlength: 3,
-          required: true
-        },
-        'user[email]': {
-          required: true,
-          email: true
-        },
-        'user[password]': {
-          required: true
-        },
-        'user[password_confirmation]': {
-          required: true,
-          equalTo: '.new-user-form #user_password'
-        }
-      },
-      highlight: function(element) {
-        $(element).closest('.form-group').addClass('has-error');
-      },
-      unhighlight: function(element) {
-        $(element).closest('.form-group').removeClass('has-error');
-      }
-    })
