--- a/app/views/errors/ajax_errors.js.erb
+++ b/app/views/errors/ajax_errors.js.erb
@@ -1,9 +1,17 @@
-<% errors_text = '' %>
-<% errors.messages.each do |_, messages| %>
-  <% messages.each do |msg| %>
-    <% errors_text += "- #{msg} \n" %>
-  <% end %>
-<% end %>
-<% errors_text = "#{t('errors.messages.not_saved', count: errors.count)} \r\n#{errors_text}" %>
+<% 
+    errors_text = ''
+    errors.messages.each do |_, messages|
+      messages.each do |msg|
+        errors_text += "- #{msg} \n"
+      end
+    end
+    errors_text = "#{t('errors.messages.not_saved', count: errors.count)} \r\n#{errors_text}"
+%>
 
-AjaxErrorMessage.render("<%= j errors_text.html_safe %>");
+var event = new CustomEvent('action:error', {
+  detail: {
+    message: "<%= j errors_text.html_safe %>"
+  }
+});
+
+document.dispatchEvent(event)
