--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title= page_title(yield(:title))
+    = stylesheet_pack_tag 'vendor'
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
 
     = javascript_pack_tag 'manifest'
