--- a/app/views/tracks/_filters.html.haml
+++ b/app/views/tracks/_filters.html.haml
@@ -1,7 +1,7 @@
 .content-block.tracks-filters
   .row
     .col-sm-12
-      %h3=t '.filters'
+      %h3=t 'tracks.index.filters'
   .row
     - query_params = index_params[:query] || {}
     .col-sm-3
