--- a/app/views/layouts/application.html+mobile.haml
+++ b/app/views/layouts/application.html+mobile.haml
@@ -12,13 +12,7 @@
 
     = csrf_meta_tags
 
-    %meta{property: 'og:title', content: page_title(yield(:title))}
-    %meta{property: 'og:url', content: request.original_url}
-    %meta{property: 'og:image', content: asset_url('logo260.png')}
-    %meta{property: 'og:image:secure_url', content: asset_url('logo260.png')}
-    %meta{property: 'og:image:type', content: 'image/png'}
-    %meta{property: 'og:image:width', content: '260'}
-    %meta{property: 'og:image:height', content: '260'}
+    = render 'layouts/open_graph'
 
     %meta{name: "viewport", content: "width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"}
 
