--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -12,9 +12,10 @@ $bronze: #df8250;
 $bronze-light: #ffaa72;
 $bronze-dark: #c87548;
 
-$blue: #75a4ba;
+$blue:       #75a4ba;
 $blue-light: #8fc8e3;
-$blue-dark: #5c8293;
+$blue-dark:  #5c8293;
+$blue-hover: #39c0ff;
 
 $green: #5cb85c;
 $green-light: #6cd86c;
