--- a/app/assets/stylesheets/variables/_app_icons.scss
+++ b/app/assets/stylesheets/variables/_app_icons.scss
@@ -12,3 +12,4 @@ $icon-skyderby:     '\e905';
 $icon-notification: '\e90b';
 $icon-logout:       '\e922';
 $icon-remove:       '\e911';
+$icon-track:        '\e907';
