--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -4,19 +4,25 @@
  *= require select2-bootstrap
 */
 
-@import 'bootstrap_variables_overrides';
-@import "bootstrap-sprockets";
-@import "bootstrap";
+// @import 'bootstrap_variables_overrides';
+// @import "bootstrap-sprockets";
+// @import "bootstrap";
 
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
 @import '../variables';
 @import '../common/**/*';
-@import '../blocks/**/*';
+// @import '../blocks/**/*';
 
 @import 'variables';
 @import '**/*';
+
+* {
+	padding: 0;
+	margin: 0;
+	outline: none;
+}
 
 html, body {
   overflow-x: hidden;
@@ -26,3 +32,10 @@ html, body {
   }
 }
 
+body {
+	color: $main-text-color;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	background: #f8f8f8;
+	-webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+}
