--- a/app/assets/stylesheets/mobile/_footer.scss
+++ b/app/assets/stylesheets/mobile/_footer.scss
@@ -1,38 +1,22 @@
 footer {
-  background-color: rgba(255, 255, 255, 0.95);
-  border-top-color: rgba(0, 0, 0, 0.14);
-  border-top-style: solid;
-  border-top-width: 1px;
-
-  color: #777777;
+  width: 100%;
+  color: $main-text-color;
+  display: block;
   font-size: 12px;
+  line-height: 12px;
+  margin: 10px 0;
 
-  padding-top: 10px;
-  padding-bottom: 5px;
-
-  a {
-    color: #555;
+  i {
+    margin: 0 3px;
   }
 
-  .section-title {
-    font-weight: bold;
-    margin-bottom: 10px
-  }
+  p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  ul {
-    padding-left: 0px;
-
-    li {
-      list-style-type: none;
-      margin-bottom: 7px;
-    }
-  }
-
-  .footer-buttons {
-    .btn {
-      padding: 5px;
-      width: 100%;
-      margin-bottom: 12px;
+    &:first-child {
+      padding-bottom: 2px;
     }
   }
 }
