--- a/app/views/layouts/_footer.html+mobile.haml
+++ b/app/views/layouts/_footer.html+mobile.haml
@@ -1,34 +1,6 @@
-- cache "app_footer_mobile_#{I18n.locale}", expires_in: 1.hour do
-  %footer
-    .container
-      .row
-
-        .col-xs-7.col-sm-9
-          %ul
-            %li.section-title
-              Contact us
-            %li
-              %a{href: 'https://www.facebook.com/skyderby.ru'}
-                %i.fa.fa-fw.fa-facebook-square
-                = t('application.footer.fb_page')
-            %li
-              %a{href: 'mailto:skyksandr@gmail.com'}
-                %i.fa.fa-fw.fa-mail-forward
-                = 'skyksandr@gmail.com'
-
-        .col-xs-5.col-sm-3.text-right.footer-buttons
-          .dropup
-            %a.dropdown-toggle.locale-dropdown.btn.btn-sm.btn-default{href: '#', data: {toggle: 'dropdown'}}
-              = image_tag asset_path('blank.gif'), class: "flag flag-#{I18n.locale}"
-              = lang_presentation I18n.locale
-              %i.fa.fa-caret-up
-            = lang_menu
-          = link_to 'Desktop version', { mobile: '0' }, class: 'btn btn-sm btn-default'
-
-      .row
-        .col-xs-12
-          = "© 2014-#{Time.now.year}"
-          = t('application.footer.made_with')
-          %i.fa.fa-heart
-          = "#{t 'application.footer.owner'} "
-
+%footer
+  %p= "© 2014-#{Time.now.year} SKYDERBY"
+  %p
+    = t('application.footer.made_with')
+    %i.fa.fa-heart
+    Skyderby Team
