migrate filefield handlers to stimulus

--- a/app/views/events/event_tracks/edit.js.erb
+++ b/app/views/events/event_tracks/edit.js.erb
@@ -1,6 +1,4 @@
 $('#modal').html('<%= j render('form_modal') %>');
-
-$('#new_event_track .btn-file :file').on('change', Skyderby.helpers.FileField.change);
-$('#new_event_track .btn-file :file').on('fileselect', Skyderby.helpers.FileField.fileselect);
+new Skyderby.views.EventTrackForm({el: '#new_event_track'});
 
 $('#modal').modal('show');
