--- a/app/views/events/event_tracks/_form_modal.html.haml
+++ b/app/views/events/event_tracks/_form_modal.html.haml
@@ -36,12 +36,13 @@
           .form-group
             = builder.label :file, t('activerecord.attributes.event_track.file'), class: 'control-label col-sm-4'
             .col-sm-8
-              .input-group
-                %input.form-control{type: 'text', readonly: true}
-                  %span.input-group-btn
-                    %span.btn.btn-default.btn-file
-                      &hellip;
-                      = builder.file_field :file, class: 'form-control'
+              .input-group{'data-controller': 'filefield'}
+                %input.form-control{type: 'text', readonly: true, 'data-target': 'filefield.text_field'}
+                %span.input-group-btn
+                  %span.btn.btn-default.btn-file
+                    &hellip;
+                    = builder.file_field :file, class: 'form-control', 'data-target': 'filefield.file_field', 'data-action': 'change->filefield#change'
+
         .radio
           = f.label :track_from, value: :existing_track do
             = f.radio_button :track_from, :existing_track, checked: !@event_track.new_record?
@@ -50,7 +51,7 @@
           = f.label :track, class: 'control-label col-sm-4'
           .col-sm-8
             = f.select :track_id, 
-                       options_for_select([[(@event_track.track.presentation if @event_track.track_id), @event_track.track_id]]),
+                       options_for_select([[(track_presentation(@event_track.track) if @event_track.track_id), @event_track.track_id]]),
                        {},
                        placeholder: "Choose track from list",
                        class: 'form-control',
