--- a/app/views/sponsors/_form_modal.html.haml
+++ b/app/views/sponsors/_form_modal.html.haml
@@ -28,12 +28,12 @@
         .form-group
           = f.label :logo, class: 'control-label col-sm-4'
           .col-sm-8
-            .input-group
-              %input.form-control{type: "text", readonly: true}
-                %span.input-group-btn
-                  %span.btn.btn-default.btn-file
-                    &hellip; 
-                    = f.file_field :logo, class: 'form-control'
+            .input-group{'data-controller': 'filefield'}
+              %input.form-control{type: 'text', readonly: true, 'data-target': 'filefield.text_field'}
+              %span.input-group-btn
+                %span.btn.btn-default.btn-file
+                  &hellip; 
+                  = f.file_field :logo, class: 'form-control', 'data-target': 'filefield.file_field', 'data-action': 'change->filefield#change'
 
       .modal-footer
         = f.submit t('general.save'), class: 'btn btn-primary'
