--- a/app/views/track_files/_new_modal.html.haml
+++ b/app/views/track_files/_new_modal.html.haml
@@ -18,15 +18,7 @@
           %h4.modal-title= t 'static_pages.index.track_form.title'
 
         .modal-body
-          .upload-progress.hidden
-            .spinner
-              %i.fa.fa-3x.fa-spin.fa-circle-o-notch
-            .done-indicator.hidden
-              %i.fa.fa-3x.fa-check.text-success
-            .upload-comment
-              %span
-                Uploading...
-              %span.progress-count
+          = render 'concerns/upload_progress'
 
           = f.fields_for :track_attributes do |builder|
             .form-group
