--- a/app/views/tracks/jump_ranges/show.js.erb
+++ b/app/views/tracks/jump_ranges/show.js.erb
@@ -1,4 +1,4 @@
 var start_time = <%= @jump_range.start_point['fl_time'] %>,
     deploy_time = <%= @jump_range.deploy_point['fl_time'] %>;
 
-$('#time-selector').trigger('change', [start_time, deploy_time]);
+$('[name="track[jump_range]"').ionRangeSlider('update', { from: start_time, to: deploy_time });
